--- a/find.html
+++ b/find.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Find | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/b0eee7f877.js" crossorigin="anonymous"></script>
 </head>
@@ -36,7 +37,7 @@
         <header class="find__header">
             <ui class="find__header-list">
                 <li class="find__header-btn header-btn">
-                    <span class="header-btn_icon">
+                    <span class="header-btn__icon">
                         <i class="fas fa-qrcode fa-2x"></i>
                     </span>
                     <span class="header-btn__title">
@@ -44,7 +45,7 @@
                     </span>
                 </li>
                 <li class="find__header-btn header-btn">
-                    <span class="header-btn_icon">
+                    <span class="header-btn__icon">
                         <i class="fas fa-user-plus fa-2x"></i>
                     </span>
                     <span class="header-btn__title">
@@ -52,14 +53,14 @@
                     </span>
                 </li>
                 <li class="find__header-btn header-btn">
-                    <span class="header-btn_icon">
+                    <span class="header-btn__icon">
                         <i class="fas fa-passport fa-2x"></i>
                     </span>
                     <span class="header-btn__title">
                         Add by ID
                     </span>
                     <li class="find__header-btn header-btn">
-                        <span class="header-btn_icon">
+                        <span class="header-btn__icon">
                             <i class="far fa-envelope fa-2x"></i>
                         </span>
                         <span class="header-btn__title">
@@ -75,7 +76,7 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                    <img src="images/avatar.jpg" class="friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
                             JeongHun Youm
