--- a/friends.html
+++ b/friends.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Friends | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/b0eee7f877.js" crossorigin="anonymous"></script>
 </head>
@@ -34,7 +35,7 @@
     </header>
     <main class="friends">
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
                     <div class="friend__content">
@@ -52,7 +53,7 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                    <img src="images/avatar.jpg" class="friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus friend
@@ -65,7 +66,7 @@
             <h5 class="friends__title">friends 14</h5>
             <li class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="images/avatar.jpg" class="g-avatar friend__avatar" />
+                    <img src="images/avatar.jpg" class="friend__avatar" />
                     <div class="friend__content">
                         <span class="friend__name">
                             JeongHun Youm
@@ -79,8 +80,8 @@
                     <div class="friend__now-listening">
                         <span>
                             FTISLAND (FT NomadCoders)
-                        </span>
-                        <i class="fas fa-play"></i>
+                            <i class="fas fa-play"></i>
+                        </span>                   
                     </div>
                 </div>
             </li>
