--- a/more.html
+++ b/more.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>more | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/b0eee7f877.js" crossorigin="anonymous"></script>
 </head>
@@ -31,7 +32,7 @@
                 <i class="fas fa-qrcode"></i>
             </span>
             <span class="header__icon">
-                <a href="setting.html">
+                <a href="settings.html">
                     <i class="fas fa-cog"></i>
                 </a>
             </span>
@@ -83,21 +84,21 @@
             </ul>
         </header>
         <section class="more__suggestions">
-            <h5 class="more_title">Suggestions</h5>
+            <h5 class="more__title">Suggestions</h5>
             <ul class="more__suggestions-list">
-                <li class="more__suggestion suggetion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-quote-right fa-2x"></i>
                     </span>
                     <span class="suggestion__title">Kakao Story</span>
                 </li>
-                <li class="more__suggestion suggetion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-beer fa-2x"></i>
                     </span>
                     <span class="suggestion__title">Kakao Friends</span>
                 </li>
-                <li class="more__suggestion suggetion">
+                <li class="more__suggestion suggestion">
                     <span class="suggestion__icon">
                         <i class="fas fa-gamepad fa-2x"></i>
                     </span>
