--- a/settings.html
+++ b/settings.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Settings | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/b0eee7f877.js" crossorigin="anonymous"></script>
 </head>
@@ -22,7 +23,7 @@
     <header class="header">
         <div class="header__header-column">         
             <a href="more.html" class="header__back-btn">
-                <i class="fas fa-arrow-left fa-2x"></i>
+                <i class="fas fa-arrow-left"></i>
             </a>            
             <h1 class="header__title">Settings</h1>
         </div>
@@ -33,6 +34,28 @@
         </div>
     </header>
     <main class="settings">
+        <section class="settings__sections">
+            <ul class="setting__list">
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-lock"></i>
+                    </span>
+                    <span class="settings__title">Privacy</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-bell"></i>
+                    </span>
+                    <span class="settings__title">Notifications</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-user"></i>
+                    </span>
+                    <span class="settings__title">Friends</span>
+                </li>
+            </ul>
+        </section>
         <section class="settings__sections">
             <ul class="setting__list">
                 <li class="settings__setting">
