--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/b0eee7f877.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Chats | Kakao Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -39,22 +40,29 @@
         <ui class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                <div class="chat__column">
-                    <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
-                    <div class="chat__content">
-                        <span class="chat__username">
-                            Lynn
-                        </span>
-                        <span class="chat__preview">Going home</span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                   Going home!
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__timestamp">
+                                <spa class="chat__timestamp">
+                                    March 8
+                                </spa>    
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="chat__column">
-                    <span class="chat__timestamp">Yesterday</span>
-                </div>
                 </a>
             </li>
         </ui>
-
     </main>
     <nav class="nav">
         <ui class="nav__list">
@@ -65,6 +73,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
