--- a/find.html
+++ b/find.html
@@ -115,5 +115,8 @@
             </li>
         </ui>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
 </body>
 </html>
