--- a/index.html
+++ b/index.html
@@ -89,5 +89,8 @@
             </li>
         </ui>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen small!!</span>
+    </div>
 </body>
 </html>
