--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <h1 class="header__title">Best Friend!!!</h1>
+          <h1 class="header__title">Best Friend!!!!</h1>
         </div>
         <div class="header__header-column">
           <span class="header__icon">
